# UKF_example

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: pendulum_stabilization_class.h  sdre_controller_class.h
models/inverted_double_pendulum/: model.config  model.rsdf
src/: pendulum_stabilization_class.cpp
ukf_example/: CMakeLists.txt  package.xml
ukf_example/include/: pendulum_stabilization_class.h  sdre_controller_class.h
ukf_example/launch/: matlab_controller.launch
ukf_example/models/double_inverted_pendulum/: model.config  model.rsdf  model.sdf
ukf_example/src/: pendulum_stabilization_class.cpp  sdre_controller_class.cpp
ukf_example_matlab/: ComputeCommand.m  DIP.slx  Sdre_Controller.m  Standalone_Simulation.m  SystemDerivatives.m  custom_DARE.m  display_results.m  serviceCallback.m
ukf_example_srvs/: CMakeLists.txt  package.xml
ukf_example_srvs/srv/: ComputeCommand.srv
